// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with default conditional styles 1`] = `
.c0 {
  display: block;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1.5rem;
}

<li
  className="c0"
>
  Providers
</li>
`;

exports[`renders with set conditional styles 1`] = `
.c0 {
  display: inherit;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0;
}

<li
  className="c0"
>
  Providers
</li>
`;

exports[`renders with set conditional styles 2`] = `
.c0 {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1.5rem;
}

<li
  className="c0"
>
  Providers
</li>
`;
